fix: menu z-index

--- a/src/assets/sass/blocks/header/menu.scss
+++ b/src/assets/sass/blocks/header/menu.scss
@@ -13,7 +13,7 @@
 		height: 100%;
 		background: #14110e;
 		opacity: 0;
-		z-index: 1;
+		z-index: 1001;
 		&.fixed {
 			opacity: 1;
 		}
