--- a/src/assets/sass/blocks/header/sandwich.scss
+++ b/src/assets/sass/blocks/header/sandwich.scss
@@ -2,7 +2,7 @@
   display: none;
   padding: 1.8rem 1rem;
   border-radius: 0.3rem;
-  z-index: 1001;
+  z-index: 1002;
   @media screen and (max-width: 992px) {
     display: block;
   }
